chart/templates/ingress.yaml
# This chart was originally developed by @MAVRICK-1
# Source: https://github.com/MAVRICK-1/kubestellar-ui

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
spec:
  rules:
    - host: frontend.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
